# GLFramework

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  sonar-project.properties
.github/workflows/: nightly.yml  rolling.yml
cmake/: GLFrameworkConfig.cmake
include/: GLApplication.h  GLApplicationBuilder.h  GLFramework.h  GLService.h  GLServiceProvider.h  GLWindow.h  export.h  types.h
libs/: CMakeLists.txt
src/: GLFramework.cpp
tests/: CMakeLists.txt
tests/src/: test.cpp
